# turboquant-rs

./: .gitignore  Cargo.toml  README.md
benches/: compression.rs  fwht_vs_dense.rs  qjl_accuracy.rs
examples/: demo.rs  full_pipeline.rs
results/: qjl_results.json
scripts/: plot_qjl_accuracy.py  plot_results.py
src/: attention.rs  fwht.rs  int8_quant.rs  lib.rs  main.rs  metrics.rs  polarquant.rs  qjl.rs  quantize.rs
